# ht-data-ome-zarr-benchmark

./: .gitignore  README.md  pyproject.toml
00_data_preprocessing/: check_ngff_integrity.ps1  convert_bacteria-mat_to_ngff.py  convert_between_eps_ri.py  convert_mat73_to_ngff.py  convert_tcf2ngff.py  convert_zarr2noisy_zarr.py  copy_data_with_noise.ipynb  copy_data_with_noise.py  crop_ome_zarr_image.ipynb  mat2ngff_bulk.ps1  stitch_ngff.py  zip_ngff.ps1
00_data_preprocessing/configuration-example/: mat2ngff_bulk.ps1
01_compression_benchmark/: benchmark_compression.py  benchmark_recipe-2.toml  benchmark_recipe-3.toml  benchmark_recipe.toml  benchmark_sampled_compression.py  benchmark_sampled_compression_preset_bulk.py  generate_benchmark_sample.py  plot_benchmark_compression.ipynb
01_compression_benchmark/execution-example/: bulk-benchmark.ps1  bulk-benchmark.sh  generate-benchmark.sh
01_compression_benchmark/utils/: spatial_filter.py
02_remote_access/: simple-server.py
02_remote_access/example/: simple-server.sh
02_visualization/: plot_benchmark_compression.ipynb  view_data.ipynb
03_visualization/: generate_whole_benchmark_table.py  merge_output_table.py  view_compression_benchmark-gpu.ipynb  view_compression_benchmark.ipynb  view_slice_image.ipynb  whole_benchmark_script.toml
03_visualization/execution-example/: bulk-merge-output-table.sh
utils/: __init__.py  argument_configuration.py  nvidia_compressor.py  squeeze_filter.py
