[project]
name = "12-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8",
    "h5py>=3.12.1",
    "hypercorn>=0.17.3",
    "ipykernel>=6.29.5",
    "multiview-stitcher>=0.1.19",
    "napari-ome-zarr>=0.6.1",
    "napari-tomocube-data-viewer>=2024.10.0",
    "napari[all]>=0.5.6",
    "numcodecs>=0.15.1",
    "numpy>=2.1.3",
    "ome-zarr>=0.9.0",
    "pandas>=2.2.3",
    "paramiko>=3.5.1",
    "pyqt5-qt5==5.15.2",
    "tcfile>=2024.11.0",
    "tqdm>=4.67.1",
    "zarr>=2,<3",
]
